--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(inheritance_)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp counter.cpp counter.h)
-#set(SOURCE_FILES testDistance.cpp)
+#set(SOURCE_FILES main.cpp counter.cpp counter.h)
+set(SOURCE_FILES testDistance.cpp distance.cpp distance.h)
 
 add_executable(inheritance_ ${SOURCE_FILES})
